--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
   <title>PROJECTNAME</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="//webapi.amap.com/maps?v=1.4.15&key=5b73e16628939ed659ef7bf87d264b05"></script>
+  <script src="//webapi.amap.com/ui/1.0/main.js"></script>
+  <base href="//webapi.amap.com/ui/1.0/ui/misc/PoiPicker/examples/"/>
+  <link rel="stylesheet" href="https://cache.amap.com/lbs/static/main1119.css"/>
+  <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=5b73e16628939ed659ef7bf87d264b05&plugin=AMap.Autocomplete,AMap.PlaceSearch"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
